; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_hw.c_ath9k_hw_gettsf64.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_hw.c_ath9k_hw_gettsf64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hw = type { i32 }

@AR_TSF_U32 = common dso_local global i32 0, align 4
@ATH9K_MAX_TSF_READ = common dso_local global i32 0, align 4
@AR_TSF_L32 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ath9k_hw_gettsf64(%struct.ath_hw* %0) #0 {
  %2 = alloca %struct.ath_hw*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.ath_hw* %0, %struct.ath_hw** %2, align 8
  %7 = load %struct.ath_hw*, %struct.ath_hw** %2, align 8
  %8 = load i32, i32* @AR_TSF_U32, align 4
  %9 = call i64 @REG_READ(%struct.ath_hw* %7, i32 %8)
  store i64 %9, i64* %4, align 8
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %27, %1
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @ATH9K_MAX_TSF_READ, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %30

14:                                               ; preds = %10
  %15 = load %struct.ath_hw*, %struct.ath_hw** %2, align 8
  %16 = load i32, i32* @AR_TSF_L32, align 4
  %17 = call i64 @REG_READ(%struct.ath_hw* %15, i32 %16)
  store i64 %17, i64* %3, align 8
  %18 = load %struct.ath_hw*, %struct.ath_hw** %2, align 8
  %19 = load i32, i32* @AR_TSF_U32, align 4
  %20 = call i64 @REG_READ(%struct.ath_hw* %18, i32 %19)
  store i64 %20, i64* %5, align 8
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* %4, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %14
  br label %30

25:                                               ; preds = %14
  %26 = load i64, i64* %5, align 8
  store i64 %26, i64* %4, align 8
  br label %27

27:                                               ; preds = %25
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %10

30:                                               ; preds = %24, %10
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* @ATH9K_MAX_TSF_READ, align 4
  %33 = icmp eq i32 %31, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @WARN_ON(i32 %34)
  %36 = load i64, i64* %4, align 8
  %37 = trunc i64 %36 to i32
  %38 = shl i32 %37, 32
  %39 = sext i32 %38 to i64
  %40 = load i64, i64* %3, align 8
  %41 = or i64 %39, %40
  %42 = trunc i64 %41 to i32
  ret i32 %42
}

declare dso_local i64 @REG_READ(%struct.ath_hw*, i32) #1

declare dso_local i32 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
